--- a/src/mod/wire.mod/Makefile
+++ b/src/mod/wire.mod/Makefile
@@ -6,15 +6,11 @@ doofus:
 	@echo ""
 	@cd ../../../; make
 
-clean:
-	@rm -f *.o *.so *~
-
 static: ../wire.o
 
 modules: ../../../wire.so
 
-../wire.o: ../module.h ../modvals.h ../../eggdrop.h wire.c wire.h \
-../../chan.h ../../users.h
+../wire.o:
 	$(CC) $(CFLAGS) $(CPPFLAGS) -DMAKING_MODS -c wire.c
 	rm -f ../wire.o
 	mv wire.o ../
@@ -23,4 +19,14 @@ modules: ../../../wire.so
 	$(LD) -o ../../../wire.so ../wire.o
 	$(STRIP) ../../../wire.so
 
+depend:
+	$(CC) $(CFLAGS) $(CPPFLAGS) -MM *.c > .depend
+
+clean:
+	@rm -f .depend *.o *.so *~
+
 #safety hash
+../wire.o: wire.c ../module.h ../../../config.h ../../main.h ../../lang.h \
+ ../../eggdrop.h ../../flags.h ../../proto.h ../../../lush.h \
+ ../../cmdt.h ../../tclegg.h ../../tclhash.h ../../chan.h \
+ ../../users.h ../modvals.h ../../tandem.h wire.h
