--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,5 +1,8 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile,v 1.5 2000/01/02 02:42:11 fabian Exp $
+# $Id: Makefile.in,v 1.1 2000/02/25 21:51:30 fabian Exp $
+
+RESLIB = @RESLIB@
+
 
 doofus:
 	@echo ""
@@ -8,12 +11,13 @@ doofus:
 	@cd ../../../; make
 
 static: ../dns.o
+	@echo -n " $(RESLIB)" >> ../mod.xlibs
 
 modules: ../../../dns.so
 
 ../dns.o:
 	$(CC) $(CFLAGS) $(CPPFLAGS) -DMAKING_MODS -c dns.c
-	rm -f ../dns.o
+	@rm -f ../dns.o
 	mv dns.o ../
 
 ../../../dns.so: ../dns.o
@@ -25,6 +29,9 @@ depend:
 
 clean:
 	@rm -f .depend *.o *.so *~
+
+distclean: clean
+	@rm -f Makefile config.cache config.log config.status
 
 #safety hash
 ../dns.o: dns.c ../module.h ../../../config.h ../../main.h ../../lang.h \
