configure_makefile_fix2 patch

--- a/src/mod/dns.mod/configure.in
+++ b/src/mod/dns.mod/configure.in
@@ -1,6 +1,6 @@
 dnl Eggdrop compile-time configuration file for src/mod/dns.mod
 dnl
-dnl $Id: configure.in,v 1.1 2000/02/25 21:51:30 fabian Exp $
+dnl $Id: configure.in,v 1.2 2000/02/29 19:57:27 fabian Exp $
 
 dnl This file is based on the autoconf m4 macros. Special eggdrop
 dnl macros are used to optimise the size of the resulting configure
@@ -16,36 +16,36 @@ EGG_INIT(coredns.c)
 
 RESLIB_AVAIL="true"
 AC_CHECK_FUNC(res_init, ,
-	AC_CHECK_LIB(resolv, res_init, RESLIB="-lresolv",
-		AC_CHECK_LIB(bind, res_init, RESLIB="-lbind", [dnl
-			RESLIB_AVAIL="false";
-		])dnl
-	)dnl
+  AC_CHECK_LIB(resolv, res_init, RESLIB="-lresolv",
+    AC_CHECK_LIB(bind, res_init, RESLIB="-lbind", [dnl
+      RESLIB_AVAIL="false";
+    ])dnl
+  )dnl
 )dnl
 AC_CHECK_FUNC(res_mkquery, ,
-	AC_CHECK_LIB(resolv, res_mkquery, [dnl
-		if ! test "x${RESLIB}" = "-lresolv"; then
-			RESLIB="${RESLIB} -lresolv"
-		fi
-	],
-		AC_CHECK_LIB(bind, res_mkquery, [dnl
-			if ! test "x${RESLIB}" = "-lbind"; then
-				RESLIB="${RESLIB} -lbind"
-			fi
-		], [dnl
-			RESLIB_AVAIL="false";
-		])
-	)
+  AC_CHECK_LIB(resolv, res_mkquery, [dnl
+    if test "${RESLIB}" != "-lresolv"; then
+      RESLIB="${RESLIB} -lresolv"
+    fi
+  ],
+    AC_CHECK_LIB(bind, res_mkquery, [dnl
+      if test "${RESLIB}" != "-lbind"; then
+        RESLIB="${RESLIB} -lbind"
+      fi
+    ], [dnl
+      RESLIB_AVAIL="false";
+    ])
+  )
 )
 if test "${RESLIB_AVAIL}" = false; then
-    cat >&2 <<EOF
+  cat >&2 <<EOF
 configure: warning:
 
   Your system provides no functional resolver library. The DNS
   module will therefore be disabled.
 
 EOF
-	../modtool -q del dns
+  EGG_REMOVE_MOD(dns)
 fi
 AC_SUBST(RESLIB)
 
