--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile.in,v 1.1 2000/02/25 21:51:30 fabian Exp $
+# $Id: Makefile.in,v 1.2 2000/03/04 20:40:24 fabian Exp $
 
 RESLIB = @RESLIB@
 
@@ -11,7 +11,7 @@ doofus:
 	@cd ../../../; make
 
 static: ../dns.o
-	@echo -n " $(RESLIB)" >> ../mod.xlibs
+	@echo "$(RESLIB)" >> ../mod.xlibs
 
 modules: ../../../dns.so
 
