--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,14 +1,15 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile.in,v 1.2 2000/03/04 20:40:24 fabian Exp $
+# $Id: Makefile.in,v 1.3 2000/03/22 00:42:58 fabian Exp $
 
 RESLIB = @RESLIB@
+srcdir = .
 
 
 doofus:
 	@echo ""
 	@echo "Let's try this from the right directory..."
 	@echo ""
-	@cd ../../../; make
+	@cd ../../../ && make
 
 static: ../dns.o
 	@echo "$(RESLIB)" >> ../mod.xlibs
@@ -16,7 +17,7 @@ static: ../dns.o
 modules: ../../../dns.so
 
 ../dns.o:
-	$(CC) $(CFLAGS) $(CPPFLAGS) -DMAKING_MODS -c dns.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -DMAKING_MODS -c $(srcdir)/dns.c
 	@rm -f ../dns.o
 	mv dns.o ../
 
@@ -25,7 +26,7 @@ modules: ../../../dns.so
 	$(STRIP) ../../../dns.so
 
 depend:
-	$(CC) $(CFLAGS) $(CPPFLAGS) -MM *.c > .depend
+	$(CC) $(CFLAGS) $(CPPFLAGS) -MM $(srcdir)/*.c > .depend
 
 clean:
 	@rm -f .depend *.o *.so *~
