--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile.in,v 1.3 2000/03/22 00:42:58 fabian Exp $
+# $Id: Makefile.in,v 1.4 2000/03/24 23:00:25 fabian Exp $
 
 RESLIB = @RESLIB@
 srcdir = .
@@ -35,7 +35,14 @@ distclean: clean
 	@rm -f Makefile config.cache config.log config.status
 
 #safety hash
-../dns.o: dns.c ../module.h ../../../config.h ../../main.h ../../lang.h \
- ../../eggdrop.h ../../flags.h ../../proto.h ../../../lush.h \
- ../../cmdt.h ../../tclegg.h ../../tclhash.h ../../chan.h ../../users.h \
- ../modvals.h ../../tandem.h dns.h coredns.c
+coredns.o: .././dns.mod/coredns.c
+dns.o: .././dns.mod/dns.c ../../../src/mod/module.h \
+ ../../../src/main.h ../../../src/lang.h ../../../src/eggdrop.h \
+ ../../../src/flags.h ../../../src/proto.h ../../../lush.h \
+ ../../../src/misc_file.h ../../../src/cmdt.h ../../../src/tclegg.h \
+ ../../../src/tclhash.h ../../../src/chan.h ../../../src/users.h \
+ ../../../src/compat/compat.h ../../../src/compat/inet_aton.h \
+ ../../../src/compat/snprintf.h ../../../src/compat/memset.h \
+ ../../../src/compat/memcpy.h ../../../src/compat/strcasecmp.h \
+ ../../../src/mod/modvals.h ../../../src/tandem.h ../dns.mod/dns.h \
+ ../dns.mod/coredns.c
