--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile.in,v 1.4 2000/03/24 23:00:25 fabian Exp $
+# $Id: Makefile.in,v 1.5 2000/03/31 23:04:22 fabian Exp $
 
 RESLIB = @RESLIB@
 srcdir = .
@@ -26,7 +26,7 @@ modules: ../../../dns.so
 	$(STRIP) ../../../dns.so
 
 depend:
-	$(CC) $(CFLAGS) $(CPPFLAGS) -MM $(srcdir)/*.c > .depend
+	$(CC) $(CFLAGS) $(CPPFLAGS) -MM $(srcdir)/dns.c > .depend
 
 clean:
 	@rm -f .depend *.o *.so *~
@@ -35,8 +35,7 @@ distclean: clean
 	@rm -f Makefile config.cache config.log config.status
 
 #safety hash
-coredns.o: .././dns.mod/coredns.c
-dns.o: .././dns.mod/dns.c ../../../src/mod/module.h \
+../dns.o: .././dns.mod/dns.c ../../../src/mod/module.h \
  ../../../src/main.h ../../../src/lang.h ../../../src/eggdrop.h \
  ../../../src/flags.h ../../../src/proto.h ../../../lush.h \
  ../../../src/misc_file.h ../../../src/cmdt.h ../../../src/tclegg.h \
