--- a/src/mod/wire.mod/Makefile
+++ b/src/mod/wire.mod/Makefile
@@ -1,5 +1,5 @@
 # Makefile for src/mod/wire.mod/
-# $Id: Makefile,v 1.10 2000/03/24 23:00:25 fabian Exp $
+# $Id: Makefile,v 1.11 2000/03/31 23:04:22 fabian Exp $
 
 srcdir = .
 
@@ -24,14 +24,14 @@ modules: ../../../wire.so
 	$(STRIP) ../../../wire.so
 
 depend:
-	$(CC) $(CFLAGS) $(CPPFLAGS) -MM $(srcdir)/*.c > .depend
+	$(CC) $(CFLAGS) $(CPPFLAGS) -MM $(srcdir)/wire.c > .depend
 
 clean:
 	@rm -f .depend *.o *.so *~
 distclean: clean
 
 #safety hash
-wire.o: .././wire.mod/wire.c ../../../src/mod/module.h \
+../wire.o: .././wire.mod/wire.c ../../../src/mod/module.h \
  ../../../src/main.h ../../../src/lang.h ../../../src/eggdrop.h \
  ../../../src/flags.h ../../../src/proto.h ../../../lush.h \
  ../../../src/misc_file.h ../../../src/cmdt.h ../../../src/tclegg.h \
