--- a/src/mod/dns.mod/Makefile.in
+++ b/src/mod/dns.mod/Makefile.in
@@ -1,5 +1,5 @@
 # Makefile for src/mod/dns.mod/
-# $Id: Makefile.in,v 1.6 2000/07/09 14:10:49 fabian Exp $
+# $Id: Makefile.in,v 1.7 2000/09/12 15:26:52 fabian Exp $
 
 RESLIB = @RESLIB@
 srcdir = .
@@ -36,12 +36,13 @@ distclean: clean
 
 #safety hash
 ../dns.o: .././dns.mod/dns.c ../../../src/mod/module.h \
- ../../../src/main.h ../../../src/lang.h ../../../src/eggdrop.h \
- ../../../src/flags.h ../../../src/proto.h ../../../lush.h \
- ../../../src/misc_file.h ../../../src/cmdt.h ../../../src/tclegg.h \
- ../../../src/tclhash.h ../../../src/chan.h ../../../src/users.h \
- ../../../src/compat/compat.h ../../../src/compat/inet_aton.h \
- ../../../src/compat/snprintf.h ../../../src/compat/memset.h \
- ../../../src/compat/memcpy.h ../../../src/compat/strcasecmp.h \
+ ../../../src/main.h ../../../config.h ../../../src/lang.h \
+ ../../../src/eggdrop.h ../../../src/flags.h ../../../src/proto.h \
+ ../../../lush.h ../../../src/misc_file.h ../../../src/cmdt.h \
+ ../../../src/tclegg.h ../../../src/tclhash.h ../../../src/chan.h \
+ ../../../src/users.h ../../../src/compat/compat.h \
+ ../../../src/compat/inet_aton.h ../../../src/compat/snprintf.h \
+ ../../../src/compat/memset.h ../../../src/compat/memcpy.h \
+ ../../../src/compat/strcasecmp.h ../../../src/compat/strftime.h \
  ../../../src/mod/modvals.h ../../../src/tandem.h ../dns.mod/dns.h \
  ../dns.mod/coredns.c
