here are some backports from 1.7 to 1.6 .. mostly minor

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.33 2001/07/14 12:38:55 poptix Exp $
+# $Id: eggdrop.complete.conf,v 1.34 2001/09/24 04:25:38 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -348,12 +348,6 @@ unbind dcc n simul *dcc:simul
 # maximum number of dcc connections you will allow - you can increase this
 # later, but never decrease it, 50 seems to be enough for everybody
 set max-dcc 50
-
-# this setting is so that people can't send fake ports to your bot when
-# they try to dcc it. irc clients should never use a port below 1024 and
-# well 65535 is the highest port possible. this setting is used for telnet
-# too.
-set dcc-portrange 1024:65535
 
 # [0/1] add the 'dccsimul' tcl command (needed by certain scripts like
 # action.fix.tcl)
