newe pid file setting

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.34 2001/09/24 04:25:38 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.35 2001/09/28 14:07:25 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -151,6 +151,9 @@ set console "mkcobxs"
 
 # the userfile: where user records are stored
 set userfile "LamestBot.user"
+
+# the pidfile: where eggdrop saves its pid file to
+# set pidfile "pid.${botnet-nick}"
 
 # [0/1] do you want the userlist to be sorted when saving
 set sort-users 0
