--- a/doc/settings/core.settings
+++ b/doc/settings/core.settings
@@ -174,6 +174,8 @@ set logfile-suffix ".%d%b%Y"
 set userfile "LamestBot.user"
     Specify here how your userfile should be called
 
+set pidfile "pid.LamestBot"
+    Specify here what filename eggdrop will save its pid under
 
 set sort-users 0
     If  you want your userfile to be sorted on save, turn this feature on.
