--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.advanced.conf,v 1.30 2001/07/14 12:38:55 poptix Exp $
+# $Id: eggdrop.advanced.conf,v 1.31 2001/11/05 04:08:25 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this, to set up your bot.  Right now it creates a bot called
@@ -43,8 +43,8 @@ set timezone "EST"
 # ex. if the timezone is UTC+1 the offset is -1
 set offset "5"
 
-# If you dont want to use the timezone setting for scripting purpose
-# only but instead everywhere possible (new) then uncomment the next line.
+# If you don't want to use the timezone setting for scripting purpose
+# only but instead everywhere possible (new) then un-comment the next line.
 #set env(TZ) "$timezone $offset"
 
 # if you're using virtual hosting (your machine has more than 1 IP), you
@@ -99,7 +99,7 @@ set max-logsize 0
 # (if max-logsize is enabled) instead of every 5minutes as before.
 # This could be good if you have had problem with the
 # logfile filling your quota or hdd or if you log +p
-# and publish it on the web and wants more uptodate info.
+# and publish it on the web and wants more up-to-date info.
 # If you are concerned with resources keep the default setting 0.
 # (although I haven't noticed anything)
 set quick-logs 0
@@ -108,7 +108,7 @@ set quick-logs 0
 # and 'p' are logged to whatever channel they happened on.  most other
 # events are currently logged to every channel.  you can make a logfile
 # belong to all channels by assigning it to channel "*".  there are also
-# five user-defined levels ('1'..'5') which are used by Tcl scripts.
+# five user-defined levels ('1'..'5') which are used by TCL scripts.
 
 # in 'eggdrop.log' put private msgs/ctcps, commands, misc info, and
 # errors from any channel:
@@ -134,7 +134,7 @@ set logfile-suffix ".%d%b%Y"
 
 # once a day the logfiles are switched out and started fresh --
 # this specifies when that should happen (in military time)
-# [note that a leading 0 will make Tcl think this is an octal value,
+# [note that a leading 0 will make TCL think this is an octal value,
 # something you probably don't want.]
 set switch-logfiles-at 300
 
@@ -285,7 +285,7 @@ set remote-boots 2
 set share-unlinks 1
 
 # to enable the 'tcl' and 'set' command (let owners directly execute
-# Tcl commands)? - a security risk!!
+# TCL commands)? - a security risk!!
 # If you select your owners wisely, you should be okay enabling these.
 # to enable, comment these two lines out
 # (In previous versions, this was enabled by default in eggdrop.h)
@@ -407,7 +407,7 @@ set global-chanset {
 }
 
 # do this for each channel you wish to sit on:
-# NOTE: for some reason Tcl won't let you put comments inside { } -- so
+# NOTE: for some reason TCL won't let you put comments inside { } -- so
 #   don't try it, cos it'll mess up your channel definition
 
 channel add #lamest {
@@ -828,7 +828,7 @@ set max-exempts 20
 #  * This is an IRCNET feature
 set max-invites 20
 
-# The following lines should be left uncommented unless the default values
+# The following lines should be left un-commented unless the default values
 # are being over-ridden. By default exempts and invites are on for IRCnet
 # and hybrid EFnet, but off for all other networks. This behavior can be
 # modified by the following 2 flags. If you're network doesn't support e/I
@@ -891,7 +891,7 @@ set prevent-mixing 1
 
 ##### TRANSFER MODULE #####
 
-# uncomment this line to load the transfer module, this provides
+# un-comment this line to load the transfer module, this provides
 # dcc send/get support and bot userfile transfer support (not sharing)
 #loadmodule transfer
 
@@ -922,7 +922,7 @@ set xfer-timeout 30
 # (this requires the channels & transfer modules)
 #loadmodule share
 
-# [0/1] when sharing user lists, DONT ACCEPT global flag changes from other bots?
+# [0/1] when sharing user lists, DON'T ACCEPT global flag changes from other bots?
 # NOTE: the bot will still send changes made on the bot, it just wont accept
 # any global flag changes from other bots
 #set private-global 0
@@ -960,7 +960,7 @@ set xfer-timeout 30
 
 ##### FILESYSTEM MODULE #####
 
-# uncomment this line to load the file system module, this provides
+# un-comment this line to load the file system module, this provides
 # an area within the bot where you can store files
 #loadmodule filesys
 
@@ -1054,13 +1054,13 @@ set info-party 0
 
 ##### BLOWFISH MODULE #####
 
-##### IF YOU DONT READ THIS YOU MAY RENDER YOUR USERFILE USELESS LATER
+##### IF YOU DON'T READ THIS YOU MAY RENDER YOUR USERFILE USELESS LATER
 
 # Choose your encryption method now, 'cause once you do, it ain't
 # changing 'til you get a new userfile, capish?  At the moment, there
 # is only one encryption option: blowfish
 
-# uncomment this line to load blowfish, the encryption module
+# un-comment this line to load blowfish, the encryption module
 # for the bot, it will not start without it loaded and commented out
 # to make sure you read the whole config file
 # this is checkmodule, because during .restart the module will already
@@ -1070,7 +1070,7 @@ set info-party 0
 
 ##### ASSOC MODULE #####
 
-# uncomment this line to load assoc support, i.e. naming channels on
+# un-comment this line to load assoc support, i.e. naming channels on
 # the botnet
 #loadmodule assoc
 
@@ -1079,7 +1079,7 @@ set info-party 0
 
 # this module provides all the standard .wire commands via dcc.
 # it's an encrypted partyline communication tool, compatible with wire.tcl
-# uncomment this line to load it
+# un-comment this line to load it
 #loadmodule wire
 
 ##### UPTIME MODULE #####
@@ -1094,7 +1094,7 @@ loadmodule uptime
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
 
-# use this for tcl and eggdrop downwards compatibility
+# use this for TCL and eggdrop downwards compatibility
 source scripts/compat.tcl
 
 # This script provides many useful minor informational commands
