--- a/config.h.in
+++ b/config.h.in
@@ -74,13 +74,13 @@
 /* Define if we need dlopen (for module support)  */
 #undef HAVE_DLOPEN
 
-/* Define for pre Tcl 7.5 compat  */
+/* Define for pre TCL 7.5 compat  */
 #undef HAVE_PRE7_5_TCL
 
-/* Define for Tcl that has Tcl_Free() (7.5p1 and later)  */
+/* Define for TCL that has Tcl_Free() (7.5p1 and later)  */
 #undef HAVE_TCL_FREE
 
-/* Define for Tcl that has threads  */
+/* Define for TCL that has threads  */
 #undef HAVE_TCL_THREADS
 
 /* Defines the current eggdrop version  */
