--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.35 2001/09/28 14:07:25 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.36 2001/11/05 04:08:25 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -38,8 +38,8 @@ set timezone "EST"
 # ex. if the timezone is UTC+1 the offset is -1
 set offset "5"
 
-# If you dont want to use the timezone setting for scripting purpose
-# only but instead everywhere possible (new) then uncomment the next line.
+# If you don't want to use the timezone setting for scripting purpose
+# only but instead everywhere possible (new) then un-comment the next line.
 #set env(TZ) "$timezone $offset"
 
 # if you're using virtual hosting (your machine has more than 1 IP), you
@@ -94,7 +94,7 @@ set max-logsize 0
 # (if max-logsize is enabled) instead of every 5minutes as before.
 # This could be good if you have had problem with the
 # logfile filling your quota or hdd or if you log +p
-# and publish it on the web and wants more uptodate info.
+# and publish it on the web and wants more up-to-date info.
 # If you are concerned with resources keep the default setting 0.
 # (although I haven't noticed anything)
 set quick-logs 0
@@ -103,7 +103,7 @@ set quick-logs 0
 # and 'p' are logged to whatever channel they happened on.  most other
 # events are currently logged to every channel.  you can make a logfile
 # belong to all channels by assigning it to channel "*".  there are also
-# five user-defined levels ('1'..'5') which are used by Tcl scripts.
+# five user-defined levels ('1'..'5') which are used by TCL scripts.
 
 # in 'eggdrop.log' put private msgs/ctcps, commands, misc info, and
 # errors from any channel:
@@ -129,7 +129,7 @@ set logfile-suffix ".%d%b%Y"
 
 # once a day the logfiles are switched out and started fresh --
 # this specifies when that should happen (in military time)
-# [note that a leading 0 will make Tcl think this is an octal value,
+# [note that a leading 0 will make TCL think this is an octal value,
 # something you probably don't want.]
 set switch-logfiles-at 300
 
@@ -260,7 +260,7 @@ set resolve-timeout 15
 
 ##### MORE ADVANCED STUFF #####
 
-# are you behind a firewall?  uncomment this and specify your socks host
+# are you behind a firewall?  un-comment this and specify your socks host
 #set firewall "proxy:178"
 # or, for a Sun "telnet passthru" firewall, set it this way
 # (does anyone besides Sun use this?)
@@ -271,7 +271,7 @@ set resolve-timeout 15
 # 10.0.0.0-10.255.255.255 and your firewall transparently changes your
 # address to a unique address for your box.) or you have IP masquerading
 # between you and the rest of the world, and /dcc chat,/ctcp chat or
-# userfile shareing aren't working. Enter your outside IP here.
+# userfile sharing aren't working. Enter your outside IP here.
 # Do not enter anything for my-ip or my-hostname.
 #set nat-ip "127.0.0.1"
 
@@ -331,7 +331,7 @@ set die-on-sighup 0
 set die-on-sigterm 1
 
 # to enable the 'tcl' and 'set' command (let owners directly execute
-# Tcl commands)? - a security risk!!
+# TCL commands)? - a security risk!!
 # If you select your owners wisely, you should be okay enabling these.
 # to enable, comment these two lines out
 # (In previous versions, this was enabled by default in eggdrop.h)
@@ -352,7 +352,7 @@ unbind dcc n simul *dcc:simul
 # later, but never decrease it, 50 seems to be enough for everybody
 set max-dcc 50
 
-# [0/1] add the 'dccsimul' tcl command (needed by certain scripts like
+# [0/1] add the 'dccsimul' TCL command (needed by certain scripts like
 # action.fix.tcl)
 set enable-simul 1
 
@@ -470,7 +470,7 @@ set global-chanset {
 }
 
 # do this for each channel you wish to sit on:
-# NOTE: for some reason Tcl won't let you put comments inside { } -- so
+# NOTE: for some reason TCL won't let you put comments inside { } -- so
 #   don't try it, cos it'll mess up your channel definition
 
 channel add #lamest {
@@ -743,7 +743,7 @@ set flood-ctcp 3:60
 # connect?
 set never-give-up 1
 
-# [0/1] If this setting is 0 then the eggdrop keeps a seperate list of the names
+# [0/1] If this setting is 0 then the eggdrop keeps a separate list of the names
 # irc servers call themselves, retaining what you entered in the config file.
 # setting it to 1 will cause the bot to replace your entry with what
 # the server actually calls itself
@@ -879,7 +879,7 @@ set wait-info 180
 set mode-buf-length 200
 
 # many irc ops check for bots that respond to 'hello'.  you can change this
-# to another word by uncommenting the following two lines, and changing
+# to another word by un-commenting the following two lines, and changing
 # "myword" to the word you want to use instead of 'hello' (it must be a
 # single word)
 # novice users are not expected to understand what these two lines do; they
@@ -888,7 +888,7 @@ set mode-buf-length 200
 #unbind msg - hello *msg:hello
 #bind msg - myword *msg:hello
 
-# Many takeover attempts occur due to lame users blindy /msg ident'n to
+# Many takeover attempts occur due to lame users blindly /msg ident'n to
 # the bot without checking if the bot is the bot.
 # We now unbind this command by default to discourage them
 unbind msg - ident *msg:ident
@@ -931,7 +931,7 @@ set max-exempts 20
 #  * This is an IRCNET feature
 set max-invites 20
 
-# The following lines should be left uncommented unless the default values
+# The following lines should be left un-commented unless the default values
 # are being over-ridden. By default exempts and invites are on for IRCnet
 # and hybrid EFnet, but off for all other networks. This behavior can be
 # modified by the following 2 flags. If you're network doesn't support e/I
@@ -994,7 +994,7 @@ set prevent-mixing 1
 
 ##### TRANSFER MODULE #####
 
-# uncomment this line to load the transfer module, this provides
+# un-comment this line to load the transfer module, this provides
 # dcc send/get support and bot userfile transfer support (not sharing)
 #loadmodule transfer
 
@@ -1038,7 +1038,7 @@ set xfer-timeout 30
 # flushing it
 #set resync-time 900
 
-# [0/1] when sharing user lists, DONT ACCEPT global flag changes from other bots?
+# [0/1] when sharing user lists, DON'T ACCEPT global flag changes from other bots?
 # NOTE: the bot will still send changes made on the bot, it just wont accept
 # any global flag changes from other bots
 #set private-global 0
@@ -1076,7 +1076,7 @@ set xfer-timeout 30
 
 ##### FILESYSTEM MODULE #####
 
-# uncomment this line to load the file system module, this provides
+# un-comment this line to load the file system module, this provides
 # an area within the bot where you can store files
 #loadmodule filesys
 
@@ -1177,13 +1177,13 @@ set info-party 0
 
 ##### BLOWFISH MODULE #####
 
-##### IF YOU DONT READ THIS YOU MAY RENDER YOUR USERFILE USELESS LATER
+##### IF YOU DON'T READ THIS YOU MAY RENDER YOUR USERFILE USELESS LATER
 
 # Choose your encryption method now, 'cause once you do, it ain't
 # changing 'til you get a new userfile, capish?  At the moment, there
 # is only one encryption option: blowfish
 
-# uncomment this line to load blowfish, the encryption module
+# un-comment this line to load blowfish, the encryption module
 # for the bot, it will not start without it loaded and commented out
 # to make sure you read the whole config file
 # this is checkmodule, because during .restart the module will already
@@ -1193,7 +1193,7 @@ set info-party 0
 
 ##### ASSOC MODULE #####
 
-# uncomment this line to load assoc support, i.e. naming channels on
+# un-comment this line to load assoc support, i.e. naming channels on
 # the botnet
 #loadmodule assoc
 
@@ -1202,7 +1202,7 @@ set info-party 0
 
 # this module provides all the standard .wire commands via dcc.
 # it's an encrypted partyline communication tool, compatible with wire.tcl
-# uncomment this line to load it
+# un-comment this line to load it
 #loadmodule wire
 
 ##### UPTIME MODULE #####
@@ -1217,7 +1217,7 @@ loadmodule uptime
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
 
-# use this for tcl and eggdrop downwards compatibility
+# use this for TCL and eggdrop downwards compatibility
 source scripts/compat.tcl
 
 # This script provides many useful minor informational commands
