--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
-# ^- set that to the directory eggdrop is in ie "#! /home/lamest/egg/eggdrop"
+# ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.11 2001/06/16 01:33:02 poptix Exp $
+# $Id: eggdrop.simple.conf,v 1.12 2001/11/05 04:08:25 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this, to set up your bot.  Right now it creates a bot called
@@ -35,7 +35,7 @@ checkmodule blowfish
 ##### variables:
 set nick "Lamestbot"
 # the nick of the bot, that which it uses on IRC, and on the botnet
-# unless you specify a sperate botnet-nick
+# unless you specify a separate botnet-nick
 
 set altnick "Llamab?t"
 # an alternative nick to use if the nick specified by 'set nick' is
