typos are being fixed .. lets release this thing already :P

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,14 +1,14 @@
 #! /path/to/executable/eggdrop
-# ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
+# ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.36 2001/11/05 04:08:25 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.37 2001/11/10 02:11:09 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
-# be sure that you know what you are doing!
+# Be sure that you know what you are doing!
 #
-# more detailed descriptions of all those settings can be found in
-# doc/settings/
+# More detailed descriptions of all those settings can be found in
+# doc/settings/.
 
 
 ##### GENERAL STUFF #####
@@ -39,11 +39,11 @@ set timezone "EST"
 set offset "5"
 
 # If you don't want to use the timezone setting for scripting purpose
-# only but instead everywhere possible (new) then un-comment the next line.
+# only, but instead, everywhere possible (new), then un-comment the next line.
 #set env(TZ) "$timezone $offset"
 
 # if you're using virtual hosting (your machine has more than 1 IP), you
-# may want to specify the particular IP to bind to.  you can specify
+# may want to specify a particular IP to bind to. you can specify
 # either by hostname or by IP.  you may also want to set the hostname
 # here if eggdrop has trouble detecting it when it starts up.  (it will
 # let you know if it has trouble -- trust me.)
