--- a/eggdrop.simple.conf
+++ b/eggdrop.simple.conf
@@ -1,22 +1,22 @@
 #! /path/to/executable/eggdrop
-# ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
+# ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.simple.conf,v 1.12 2001/11/05 04:08:25 guppy Exp $
+# $Id: eggdrop.simple.conf,v 1.13 2001/11/10 02:11:09 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
-# want to edit this, to set up your bot.  Right now it creates a bot called
-# "LamestBot" which sits on channel #lamest.
+# want to edit this, to set up your bot.  Right now, it creates a bot called
+# "LamestBot" which sits on the channel #lamest.
 #
-# more options can be found in files in doc/settings/
+# More options can be found in files in doc/settings/.
 #
 # IMPORTANT: Remember to make install and cd to the directory it created
-# (~/eggdrop by default) before you continue, running the bot from
+# (~/eggdrop by default) before you continue. Running the bot from
 # eggdrop1.6.x/ will not work.
 #
 # PLEASE EDIT THIS FILE COMPLETELY! YOUR BOT WILL NOT FUNCTION PROPERLY IF
 # YOU DO NOT CONFIGURE IT CORRECTLY! WE CAN NOT STRESS THIS ENOUGH!
 
-# don't edit those 9 lines now!!
+# don't edit these 12 lines!!
 set mod-path "modules/"
 set help-path "help/"
 set text-path "text/"
