--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,11 +1,11 @@
 #! /path/to/executable/eggdrop
-# ^- set that to the directory eggdrop is in i.e. "#! /home/lamest/egg/eggdrop"
+# ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.advanced.conf,v 1.31 2001/11/05 04:08:25 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.32 2001/11/10 02:11:09 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
-# want to edit this, to set up your bot.  Right now it creates a bot called
-# "LamestBot" which sits on channel #lamest.
+# want to edit this to set up your bot. Right now, it creates a bot called
+# "LamestBot" which sits on the channel #lamest.
 #
 # PLEASE EDIT THIS FILE COMPLETELY! YOUR BOT WILL NOT FUNCTION PROPERLY IF
 # YOU DO NOT CONFIGURE IT CORRECTLY! WE CAN NOT STRESS THIS ENOUGH!
@@ -13,8 +13,7 @@
 # NOTE: Please choose your +n (owner) users carefully! They have COMPLETE
 # access to your bot *AND* account! Only pick ones you trust!
 #
-#
-# more options can be found in files in doc/settings/
+# More options can be found in files in doc/settings/.
 
 ##### GENERAL STUFF #####
 
@@ -44,11 +43,11 @@ set timezone "EST"
 set offset "5"
 
 # If you don't want to use the timezone setting for scripting purpose
-# only but instead everywhere possible (new) then un-comment the next line.
+# only, but instead, everywhere possible (new), then un-comment the next line.
 #set env(TZ) "$timezone $offset"
 
 # if you're using virtual hosting (your machine has more than 1 IP), you
-# may want to specify the particular IP to bind to.  you can specify
+# may want to specify a particular IP to bind to.  you can specify
 # either by hostname or by IP.  you may also want to set the hostname
 # here if eggdrop has trouble detecting it when it starts up.  (it will
 # let you know if it has trouble -- trust me.)
