--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.37 2001/11/10 02:11:09 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.38 2001/11/11 20:24:44 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -103,7 +103,7 @@ set quick-logs 0
 # and 'p' are logged to whatever channel they happened on.  most other
 # events are currently logged to every channel.  you can make a logfile
 # belong to all channels by assigning it to channel "*".  there are also
-# five user-defined levels ('1'..'5') which are used by TCL scripts.
+# five user-defined levels ('1'..'5') which are used by Tcl scripts.
 
 # in 'eggdrop.log' put private msgs/ctcps, commands, misc info, and
 # errors from any channel:
@@ -129,7 +129,7 @@ set logfile-suffix ".%d%b%Y"
 
 # once a day the logfiles are switched out and started fresh --
 # this specifies when that should happen (in military time)
-# [note that a leading 0 will make TCL think this is an octal value,
+# [note that a leading 0 will make Tcl think this is an octal value,
 # something you probably don't want.]
 set switch-logfiles-at 300
 
@@ -331,7 +331,7 @@ set die-on-sighup 0
 set die-on-sigterm 1
 
 # to enable the 'tcl' and 'set' command (let owners directly execute
-# TCL commands)? - a security risk!!
+# Tcl commands)? - a security risk!!
 # If you select your owners wisely, you should be okay enabling these.
 # to enable, comment these two lines out
 # (In previous versions, this was enabled by default in eggdrop.h)
@@ -352,7 +352,7 @@ unbind dcc n simul *dcc:simul
 # later, but never decrease it, 50 seems to be enough for everybody
 set max-dcc 50
 
-# [0/1] add the 'dccsimul' TCL command (needed by certain scripts like
+# [0/1] add the 'dccsimul' Tcl command (needed by certain scripts like
 # action.fix.tcl)
 set enable-simul 1
 
@@ -470,7 +470,7 @@ set global-chanset {
 }
 
 # do this for each channel you wish to sit on:
-# NOTE: for some reason TCL won't let you put comments inside { } -- so
+# NOTE: for some reason Tcl won't let you put comments inside { } -- so
 #   don't try it, cos it'll mess up your channel definition
 
 channel add #lamest {
@@ -1217,7 +1217,7 @@ loadmodule uptime
 source scripts/alltools.tcl
 source scripts/action.fix.tcl
 
-# use this for TCL and eggdrop downwards compatibility
+# use this for Tcl and eggdrop downwards compatibility
 source scripts/compat.tcl
 
 # This script provides many useful minor informational commands
