applied Eule's sotpnethack patch and wcc's doc patch

--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.advanced.conf,v 1.33 2001/11/11 20:24:44 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.34 2001/11/28 23:26:05 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -1060,10 +1060,10 @@ set info-party 0
 # is only one encryption option: blowfish
 
 # un-comment this line to load blowfish, the encryption module
-# for the bot, it will not start without it loaded and commented out
-# to make sure you read the whole config file
-# this is checkmodule, because during .restart the module will already
-# be loaded
+# for the bot. the bot will not start without it loaded. it is 
+# commented out to make sure you read the whole config file.
+# this is checkmodule, because during .restart the module will 
+# already be loaded.
 #checkmodule blowfish
 
 
