--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.38 2001/11/11 20:24:44 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.39 2001/11/28 23:26:05 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -1184,10 +1184,10 @@ set info-party 0
 # is only one encryption option: blowfish
 
 # un-comment this line to load blowfish, the encryption module
-# for the bot, it will not start without it loaded and commented out
-# to make sure you read the whole config file
-# this is checkmodule, because during .restart the module will already
-# be loaded
+# for the bot. the bot will not start without it loaded. it is 
+# commented out to make sure you read the whole config file.
+# this is checkmodule, because during .restart the module will 
+# already be loaded.
 #checkmodule blowfish
 
 
