added BarkerJr's uptime doc

--- a/eggdrop.complete.conf
+++ b/eggdrop.complete.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.complete.conf,v 1.40 2001/11/29 23:25:36 guppy Exp $
+# $Id: eggdrop.complete.conf,v 1.41 2001/12/08 18:16:03 guppy Exp $
 #
 # This config file includes all possible options you can
 # use to configure your bot properly.
@@ -1207,8 +1207,9 @@ set info-party 0
 
 ##### UPTIME MODULE #####
 
-# this module reports uptime statistics to http://uptime.energymech.net
+# this module reports uptime statistics to http://uptime.eggheads.org
 # go look and see what your uptime is! (it will show up after 9 hours or so)
+# (this requires the server module)
 loadmodule uptime
 
 ##### SCRIPTS #####
