--- a/eggdrop.advanced.conf
+++ b/eggdrop.advanced.conf
@@ -1,7 +1,7 @@
 #! /path/to/executable/eggdrop
 # ^- Set that to the directory eggdrop is in, i.e. "#! /home/lamest/egg/eggdrop"
 #
-# $Id: eggdrop.advanced.conf,v 1.35 2001/11/29 23:25:36 guppy Exp $
+# $Id: eggdrop.advanced.conf,v 1.36 2001/12/08 18:16:03 guppy Exp $
 #
 # This is a sample configuration file for your bot.  You will definitely
 # want to edit this to set up your bot. Right now, it creates a bot called
@@ -1083,8 +1083,9 @@ set info-party 0
 
 ##### UPTIME MODULE #####
 
-# this module reports uptime statistics to http://uptime.energymech.net
+# this module reports uptime statistics to http://uptime.eggheads.org
 # go look and see what your uptime is! (it will show up after 9 hours or so)
+# (this requires the server module)
 loadmodule uptime
 
 ##### SCRIPTS #####
